--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -775,9 +775,7 @@
                                                                             .control-button,
                                                                             .icon-button,
                                                                             .control-select,
-                                                                            #date-container-inline .icon-only,
-                                                                            #prevDay,
-                                                                            #nextDay {
+                                                                            #date-container-inline .icon-only{
                                                                                 min-height: 32px !important;      /* taller, easier to tap */
                                                                                 padding: 6px 12px !important;    /* more horizontal space */
                                                                                 font-size: 13px !important;      /* readable text */
