--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -210,9 +210,9 @@
 
                                                                         input[type="date"] {
                                                                             width: auto;
-                                                                            max-width: 160px;
-                                                                            padding: 5px 6px;
-                                                                            font-size: 13px;
+                                                                            max-width: 140px;
+                                                                            padding: 4px 5px;
+                                                                            font-size: 12px;
                                                                             border: 1px solid #ccc;
                                                                             border-radius: 5px;
                                                                             background: white;
@@ -775,7 +775,9 @@
                                                                             .control-button,
                                                                             .icon-button,
                                                                             .control-select,
-                                                                            #date-container-inline .icon-only{
+                                                                            #date-container-inline .icon-only,
+                                                                            #prevDay,
+                                                                            #nextDay {
                                                                                 min-height: 32px !important;      /* taller, easier to tap */
                                                                                 padding: 6px 12px !important;    /* more horizontal space */
                                                                                 font-size: 13px !important;      /* readable text */
