--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -326,6 +326,28 @@
                                                                             flex-wrap: wrap;
                                                                             justify-content: center;
                                                                         }
+                                                                        
+                                                                        /* Ensure popup content is wide enough for images */
+                                                                        .leaflet-popup-content {
+                                                                            min-width: 275px !important; /* Slightly less than 300px to account for padding */
+                                                                            max-width: 300px !important; /* Reinforce Leaflet's default max-width */
+                                                                            box-sizing: border-box; /* Ensure padding is included in width calculations */
+                                                                        }
+
+                                                                        /* Style the image container to prevent overflow */
+                                                                        #image-container {
+                                                                            width: 100%; /* Ensure container spans full popup width */
+                                                                            overflow: hidden; /* Prevent image from overflowing container */
+                                                                            margin-top: 5px; /* Spacing above container */
+                                                                        }
+
+                                                                        /* Constrain images within the container */
+                                                                        #image-container img {
+                                                                            max-width: 100%; /* Fit within container */
+                                                                            height: auto; /* Maintain aspect ratio */
+                                                                            display: block; /* Prevent inline spacing issues */
+                                                                            margin: 0 auto; /* Center the image */
+                                                                        }
 
                                                                         .nav-button, .sked-button, .email-button, .qrz-button, .auto-track-button {
                                                                             background-color: #0078d4;
