--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -103,7 +103,7 @@
                                                                         .annual-button {
                                                                             position: absolute;
                                                                             top: 145px;
-                                                                            right: 3px;
+                                                                            right: 2px;
                                                                             background-color: #0078d4;
                                                                             color: white;
                                                                             border: none;
@@ -796,8 +796,8 @@
                                                                             #date-container-inline .icon-only,
                                                                             #prevDay,
                                                                             #nextDay {
-                                                                                min-height: 22px !important;
-                                                                                padding: 2px 2px !important;
+                                                                                min-height: 24px !important;
+                                                                                padding: 2px 4px !important;
                                                                                 font-size: 10px !important;
                                                                             }
 
@@ -915,7 +915,7 @@
 
                 <!-- Band + Track + Nav Buttons -->
                 <div class="button-band-group combined-nav">
-                    <button id="realTimeButton" class="control-button">Track</button>
+                    <button id="realTimeButton" class="auto-track-button">Track</button>
                     <select id="bandSelect" class="control-select">
                         <option value="432MHz">432MHz</option>
                         <option value="1296MHz">1296MHz</option>
