--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -394,6 +394,11 @@
                                                                             min-height: 24px; /* Reduced from 32px for compact feel */
                                                                             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
                                                                         }
+                                                                        
+                                                                        .auto-track-button {
+                                                                            min-height: 32px;
+                                                                            max-width: 50px; /* Reduced from 32px for compact feel */
+                                                                        }
 
                                                                         .nav-button:hover, .sked-button:hover, .email-button:hover, .qrz-button:hover, .auto-track-button:hover {
                                                                             background-color: #005fa3;
