--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -805,6 +805,11 @@
                                                                                 padding: 2px 4px !important;
                                                                                 font-size: 10px !important;
                                                                             }
+                                                                            
+                                                                            .auto-track-button {
+                                                                                width: 26px !important;
+                                                                                max-width: 50px;
+                                                                            }
 
                                                                             .icon-button,
                                                                             .icon-only,
