--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -807,8 +807,9 @@
                                                                             }
                                                                             
                                                                             .auto-track-button {
-                                                                                width: 26px !important;
-                                                                                max-width: 60px;
+                                                                                height: 26px !important;
+                                                                                padding: 2px 4px !important;
+                                                                                font-size: 10px !important;
                                                                             }
 
                                                                             .icon-button,
