--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -436,13 +436,13 @@
                                                                         }
 
                                                                         .auto-track-button {
-                                                                            background-color: #17a2b8;
+                                                                            background-color: #0078d4;
                                                                             padding: 4px 8px; /* Consistent reduced padding */
                                                                             font-size: 11px;
                                                                         }
 
                                                                         .auto-track-button.active {
-                                                                            background-color: #138496;
+                                                                            background-color: #0078d4;
                                                                             font-weight: 700;
                                                                         }
 
@@ -808,7 +808,7 @@
                                                                             
                                                                             .auto-track-button {
                                                                                 height: 26px !important;
-                                                                                padding: 2px 4px !important;
+                                                                                padding: 0 !important;
                                                                                 font-size: 10px !important;
                                                                             }
 
