--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -808,7 +808,7 @@
                                                                             
                                                                             .auto-track-button {
                                                                                 height: 26px !important;
-                                                                                padding: 0 !important;
+                                                                                padding: 2px 4px !important;
                                                                                 font-size: 10px !important;
                                                                             }
 
