--- a/eme-observer/noise.html
+++ b/eme-observer/noise.html
@@ -300,18 +300,63 @@
               </div>
             </div>
             <div style="display: flex; flex-direction: row; gap: 4px;">
-              <a href="https://dxer.site" target="_blank" title="Go to homepage"
-                 style="text-decoration: none; font-size: 16px; background: rgba(255,255,255,0.1); color: white; padding: 2px 6px; border-radius: 4px;">
-                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="white">
-              </a>
-              <a href="https://dxer.site/eme-observer/" target="_blank" title="Go to EME Observer"
-                 style="text-decoration: none; font-size: 16px; background: rgba(255,255,255,0.1); color: white; padding: 2px 6px; border-radius: 4px;">
-                🗺️
-              </a>
-              <a href="https://dxer.site/sky-observer-faq.html" target="_blank" title="Open FAQ"
-                 style="text-decoration: none; font-size: 16px; background: rgba(255,255,255,0.1); color: white; padding: 2px 6px; border-radius: 4px;">
-                ❓
-              </a>
+                <a href="https://dxer.site" target="_blank" title="Go to homepage"
+                   style="
+                     display: inline-flex;
+                     align-items: center;
+                     justify-content: center;
+                     width: 32px;
+                     height: 32px;
+                     background: rgba(255,255,255,0.1);
+                     color: white;
+                     border-radius: 6px;
+                     text-decoration: none;
+                     transition: background 0.2s ease;
+                   ">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white">
+                    <path d="M12 3l9 9h-3v9h-12v-9h-3l9-9z"/>
+                  </svg>
+                </a>
+
+                <a href="https://dxer.site/eme-observer/" target="_blank" title="EME Observer"
+                   style="
+                     display: inline-flex;
+                     align-items: center;
+                     justify-content: center;
+                     width: 32px;
+                     height: 32px;
+                     background: rgba(255,255,255,0.1);
+                     color: white;
+                     border-radius: 6px;
+                     text-decoration: none;
+                     transition: background 0.2s ease;
+                   "
+                   onmouseover="this.style.background='rgba(255,255,255,0.25)'"
+                   onmouseout="this.style.background='rgba(255,255,255,0.1)'">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white">
+                    <path d="M15 4l-6 2-6-2v16l6 2 6-2 6 2v-16l-6-2zm0 2.47l4 .8v12.26l-4-.8v-12.26zm-6 12.26l-4-.8v-12.26l4 .8v12.26zm2-.37v-12.72l2-.67v12.72l-2 .67z"/>
+                  </svg>
+                </a>
+
+                <a href="https://dxer.site/sky-observer/" target="_blank" title="Help"
+                   style="
+                     display: inline-flex;
+                     align-items: center;
+                     justify-content: center;
+                     width: 32px;
+                     height: 32px;
+                     background: rgba(255,255,255,0.1);
+                     color: white;
+                     border-radius: 6px;
+                     text-decoration: none;
+                     transition: background 0.2s ease;
+                   "
+                   onmouseover="this.style.background='rgba(255,255,255,0.25)'"
+                   onmouseout="this.style.background='rgba(255,255,255,0.1)'">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="white">
+                      <path d="M12 2c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4zm-1 16h2v-2h-2v2z"/>
+                  </svg>
+                </a>
             </div>
           </div>
         </div>
