--- a/eme-observer/noise.html
+++ b/eme-observer/noise.html
@@ -384,7 +384,7 @@
           </div>
           <div style="display: flex; align-items: center; gap: 4px;">
             <label for="dxGridInput">DX locator:</label>
-            <input type="text" id="dxGridInput" maxlength="6" placeholder="e.g. FN20as"
+            <input type="text" id="dxGridInput" maxlength="6" placeholder="e.g. IO91vm"
                    style="width: 60px; font-size: 11px; padding: 2px 4px; border-radius: 4px; border: none;">
           </div>
           <div style="display: flex; flex-direction: column; gap: 2px;">
@@ -405,7 +405,7 @@
             <label for="showSun">Show sun</label>
           </div>
           <div id="demoStatus" style="color: red; font-weight: bold; margin-top: 10px;">
-            Demo loaded!
+            This is a DEMO! </br> Load your CSV file and enter your GRID
           </div>
         </div>
 
