--- a/eme-observer/noise.html
+++ b/eme-observer/noise.html
@@ -1584,7 +1584,7 @@
                 updateTimeDisplay();
 
                 if (csvSource === 'demo') {
-                  demoStatus.textContent = 'Demo loaded!';
+                  demoStatus.textContent = 'This is a DEMO! </br> Load your CSV file and enter your GRID';
                   demoStatus.style.color = 'red';
                   demoStatus.style.display = 'block';
                 } else if (csvSource === 'stored') {
