--- a/eme-observer/noise.html
+++ b/eme-observer/noise.html
@@ -405,7 +405,7 @@
             <label for="showSun">Show sun</label>
           </div>
           <div id="demoStatus" style="color: red; font-weight: bold; margin-top: 10px;">
-            This is a DEMO! </br> Load your CSV file and enter your GRID
+            This is a DEMO! Load your CSV file and enter your locator
           </div>
         </div>
 
@@ -1584,7 +1584,7 @@
                 updateTimeDisplay();
 
                 if (csvSource === 'demo') {
-                  demoStatus.textContent = 'This is a DEMO!' </br> 'Load your CSV file and enter your GRID';
+                  demoStatus.textContent = 'This is a DEMO! Load your CSV file and enter your locator';
                   demoStatus.style.color = 'red';
                   demoStatus.style.display = 'block';
                 } else if (csvSource === 'stored') {
