--- a/eme-observer/noise.html
+++ b/eme-observer/noise.html
@@ -296,7 +296,7 @@
                 by SA5IKN
               </div>
               <div style="font-size: 16px; color: white; font-weight: 600; background: rgba(0, 0, 0, 0.6); padding: 2px 4px; border-radius: 2px;">
-                Sky Observer
+                EME Noise Mapper
               </div>
             </div>
             <div style="display: flex; flex-direction: row; gap: 4px;">
