--- a/eme-observer/user-guide copy.html
+++ b/eme-observer/user-guide copy.html
@@ -448,7 +448,7 @@
       <figure style="margin-top: 10px; text-align: center;">
         <a href="images/main-screen-001.jpg" target="_blank" rel="noopener">
           <img
-            src="images/testimage.jpg"
+            src="images/main-screen-001.jpg"
             alt="Screenshot of EME Observer main screen"
             loading="lazy"
             width="800"
